--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.8",
+        "twig/inky-extra": "^3.8",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
