Envois des donnees

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^3.8",
         "twig/inky-extra": "^3.8",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "^2.3"
     },
     "config": {
         "allow-plugins": {
