--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^3.8",
         "twig/inky-extra": "^3.8",
         "twig/twig": "^2.12|^3.0",
